// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should renders correctly by default 1`] = `
<View>
  <View
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "marginHorizontal": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "backgroundColor": "#9BA1B0",
            "borderRadius": 3,
            "flex": 1,
            "height": 6,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#2B78EE",
              "borderRadius": 3,
              "height": 6,
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="sliderLayoutLowThumb"
      collapsable={false}
      onLayout={[Function]}
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFF",
            "borderColor": "#9BA1B0",
            "borderRadius": 18,
            "borderWidth": 3,
            "height": 36,
            "width": 36,
          }
        }
      />
    </View>
    <View
      collapsable={false}
      style={
        {
          "position": "absolute",
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFF",
            "borderColor": "#9BA1B0",
            "borderRadius": 24,
            "borderWidth": 3,
            "height": 48,
            "width": 48,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="slider"
      collapsable={false}
      onMoveShouldSetPanResponder={[Function]}
      onPanResponderGrant={[Function]}
      onPanResponderMove={[Function]}
      onPanResponderTerminate={[Function]}
      onShouldBlockNativeResponder={[Function]}
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`Slider should renders correctly disabled 1`] = `
<View>
  <View
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "marginHorizontal": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "backgroundColor": "#9BA1B0",
            "borderRadius": 3,
            "flex": 1,
            "height": 6,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#2B78EE",
              "borderRadius": 3,
              "height": 6,
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="sliderLayoutLowThumb"
      collapsable={false}
      onLayout={[Function]}
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFF",
            "borderColor": "#9BA1B0",
            "borderRadius": 18,
            "borderWidth": 3,
            "height": 36,
            "width": 36,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="slider"
      collapsable={false}
      onMoveShouldSetPanResponder={[Function]}
      onPanResponderGrant={[Function]}
      onPanResponderTerminate={[Function]}
      onShouldBlockNativeResponder={[Function]}
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`Slider should renders correctly panHandler 1`] = `
<View>
  <View
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "marginHorizontal": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "backgroundColor": "#9BA1B0",
            "borderRadius": 3,
            "flex": 1,
            "height": 6,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": NaN,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#2B78EE",
              "borderRadius": 3,
              "height": 6,
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="sliderLayoutLowThumb"
      collapsable={false}
      onLayout={[Function]}
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFF",
            "borderColor": "#9BA1B0",
            "borderRadius": 18,
            "borderWidth": 3,
            "height": 36,
            "width": 36,
          }
        }
      />
    </View>
    <View
      collapsable={false}
      style={
        {
          "position": "absolute",
          "transform": [
            {
              "translateX": NaN,
            },
          ],
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFF",
            "borderColor": "#9BA1B0",
            "borderRadius": 24,
            "borderWidth": 3,
            "height": 48,
            "width": 48,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="slider"
      collapsable={false}
      onMoveShouldSetPanResponder={[Function]}
      onPanResponderGrant={[Function]}
      onPanResponderMove={[Function]}
      onPanResponderTerminate={[Function]}
      onShouldBlockNativeResponder={[Function]}
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`Slider should renders correctly updateThumbs 1`] = `
<View>
  <View
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "marginHorizontal": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "backgroundColor": "#9BA1B0",
            "borderRadius": 3,
            "flex": 1,
            "height": 6,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": NaN,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#2B78EE",
              "borderRadius": 3,
              "height": 6,
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="sliderLayoutLowThumb"
      collapsable={false}
      onLayout={[Function]}
      style={
        {
          "transform": [
            {
              "translateX": NaN,
            },
          ],
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFF",
            "borderColor": "#9BA1B0",
            "borderRadius": 18,
            "borderWidth": 3,
            "height": 36,
            "width": 36,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="slider"
      collapsable={false}
      onMoveShouldSetPanResponder={[Function]}
      onPanResponderGrant={[Function]}
      onPanResponderMove={[Function]}
      onPanResponderTerminate={[Function]}
      onShouldBlockNativeResponder={[Function]}
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`Slider should renders correctly with more props 1`] = `
<View>
  <View
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "bottom": 0,
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "marginHorizontal": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "backgroundColor": "#9BA1B0",
            "borderRadius": 3,
            "flex": 1,
            "height": 6,
          }
        }
      />
      <View
        collapsable={false}
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#2B78EE",
              "borderRadius": 3,
              "height": 6,
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="sliderLayoutLowThumb"
      collapsable={false}
      onLayout={[Function]}
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFF",
            "borderColor": "#9BA1B0",
            "borderRadius": 18,
            "borderWidth": 3,
            "height": 36,
            "width": 36,
          }
        }
      />
    </View>
    <View
      accessibilityLabel="slider"
      collapsable={false}
      onMoveShouldSetPanResponder={[Function]}
      onPanResponderGrant={[Function]}
      onPanResponderMove={[Function]}
      onPanResponderTerminate={[Function]}
      onShouldBlockNativeResponder={[Function]}
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</View>
`;
